--- a/Wrapsy/app/src/main/res/layout/activity_gift_details.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_gift_details.xml
@@ -19,47 +19,10 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <RelativeLayout
+            <include
+                layout="@layout/top_navigation"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:padding="16dp">
-
-                <ImageView
-                    android:id="@+id/btn_basket"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="5dp"
-                    android:padding="8dp"
-                    android:background="@drawable/circleyellow"
-                    android:layout_alignParentStart="true"
-                    android:layout_centerVertical="true"
-                    android:src="@drawable/ic_shopping_basket"
-                    android:contentDescription="Shopping basket" />
-
-                <ImageView
-                    android:id="@+id/btn_notificaciones"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="5dp"
-                    android:padding="8dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/circleyellow"
-                    android:src="@drawable/ic_notificaciones"
-                    android:contentDescription="Notifications" />
-
-                <ImageView
-                    android:id="@+id/more_options"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_margin="5dp"
-                    android:padding="8dp"
-                    android:layout_toStartOf="@id/btn_notificaciones"
-                    android:layout_centerVertical="true"
-                    android:background="@drawable/circleyellow"
-                    android:src="@drawable/ic_tres_rayitas"
-                    android:contentDescription="Menu" />
-            </RelativeLayout>
+                android:layout_height="wrap_content"/>
 
             <!-- Product Card -->
             <LinearLayout
